# HeirloomEngine

./: .gitignore  .gitmodules  CMakeLists.txt  HeirloomEngine.sln  README.md  UNIX-BuildSandboxDebug.sh  Win-GenerateProjects.bat  cross-compile.cmake  premake5.lua
.github/workflows/: cmake.yml
Heirloom/: .clang-tidy  CMakeLists.txt  Heirloom.vcxproj  Heirloom.vcxproj.filters  premake5.lua
Heirloom/include/: Heirloom.h
Heirloom/src/: hlpch.h
Heirloom/src/Heirloom/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Heirloom/src/Heirloom/Audio/: NullSoundEngine.cpp  NullSoundEngine.h  SimpleSoundEngine.cpp  SimpleSoundEngine.h  Sound.h  SoundEngine.h  SoundService.cpp  SoundService.h
Heirloom/src/Heirloom/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  LockFreeStack.cpp  LockFreeStack.h  Log.cpp  Log.h  MouseCodes.h  Timestep.cpp  Timestep.h  Window.h
Heirloom/src/Heirloom/Events/: ApplicationEvent.h  ApplicationEventArgs.h  Event.h  EventNew.cpp  EventNew.h  KeyEvent.h  KeyEventArgs.h  MouseEvent.h  MouseEventArgs.h
Heirloom/src/Heirloom/Gameplay/: GameObject.cpp  GameObject.h  SceneObject.h  Transform.cpp  Transform.h
Heirloom/src/Heirloom/Gameplay/Components/: Component.cpp  Component.h  SpriteRenderer.cpp  SpriteRenderer.h
Heirloom/src/Heirloom/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Heirloom/src/Heirloom/Profiler/: Instrumentation.cpp  Instrumentation.h
Heirloom/src/Heirloom/Renderer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Heirloom/src/Heirloom/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Heirloom/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Heirloom/src/Platform/Windows/: ImGuiGLFWBindings.cpp  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
HeirloomEditor/: HeirloomEditor.vcxproj  imgui.ini
HeirloomEditor/src/: EditorLayer.cpp  EditorLayer.h  HeirloomEditorApplication.cpp
Sandbox/: Sandbox.vcxproj
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  SandboxScene2D.cpp  SandboxScene2D.h  main.cpp
